--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,6 @@ box_utils/box_converter/cluster/.export/*
 box_utils/box_auto/docker/.secrets/*
 box_utils/box_converter/cluster/.out/*
 box_applications/waypoint_ie_10_00_1206/*
+**/.export
+box_utils/box_converter/image-anonymization-pipeline/cluster/.export/*
+box_utils/box_converter/image-anonymization-pipeline/cluster/.submit/*
