--- a/box_utils/box_auto/compose/kleinkram.yaml
+++ b/box_utils/box_auto/compose/kleinkram.yaml
@@ -4,7 +4,7 @@ x-common-config: &common-config
     context: "$HOME/git/grand_tour_box/box_utils/box_auto/docker"
     dockerfile: "$HOME/git/grand_tour_box/box_utils/box_auto/docker/box_kleinkram.Dockerfile"
     ssh:
-      default: "$HOME/.ssh/jonfrey_ws"
+      - default
   image: rslethz/grand_tour_box:kleinkram
   runtime: nvidia
   # network_mode: host
@@ -267,6 +267,18 @@ services:
       velodyne:
         condition: service_completed_successfully
 
+  filter_pointclouds_velo:
+    <<: *common-config
+    container_name: filter_pointclouds_velo
+    command:
+      [
+        "python3 /home/catkin_ws/src/grand_tour_box/box_utils/box_auto/python/box_auto/scripts/lidar/filter_pointclouds.py --lidars=velodyne",
+      ]
+    depends_on:
+      hesai:
+        condition: service_completed_successfully
+      velodyne:
+        condition: service_completed_successfully
   prepare_tf_transforms_for_public:
     <<: *common-config
     container_name: prepare_tf_transforms_for_public
