added full nerfstudio image integration

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ box_applications/waypoint_ie_10_00_1206/*
 box_utils/box_converter/image-anonymization-pipeline/cluster/.export/*
 box_utils/box_converter/image-anonymization-pipeline/cluster/.submit/*
 box_utils/box_converter/image-anonymization-pipeline/cluster/.out/*
+box_utils/box_converter/nerfstudio/.submit/*
