--- a/box_utils/box_converter/huggingface-dataset-conversion/Dockerfile
+++ b/box_utils/box_converter/huggingface-dataset-conversion/Dockerfile
@@ -1,3 +1,4 @@
+# syntax=docker/dockerfile:1.4
 FROM ros:noetic
 
 # used to debug in vscode in container
@@ -41,17 +42,30 @@ RUN pip install -r requirements-docker.txt
 
 # installing ros packages
 WORKDIR /catkin_ws/src
-ADD git@github.com:leggedrobotics/grand_tour_box.git grand_tour_box
-ADD git@github.com:ros-drivers/gps_umd.git gps_umd
-ADD git@github.com:ANYbotics/signal_logger.git signal_logger
+# ADD git@github.com:leggedrobotics/grand_tour_box.git grand_tour_box
+# ADD git@github.com:ros-drivers/gps_umd.git gps_umd
+# ADD git@github.com:ANYbotics/signal_logger.git signal_logger
+
+RUN apt-get update && apt-get install -y openssh-client git
+RUN mkdir -p /root/.ssh && \
+    chmod 700 /root/.ssh && \
+    ssh-keyscan github.com >> /root/.ssh/known_hosts && \
+    chmod 644 /root/.ssh/known_hosts
+    
+RUN --mount=type=ssh git clone git@github.com:ros-drivers/gps_umd.git gps_umd
+RUN --mount=type=ssh git clone git@github.com:ANYbotics/signal_logger.git signal_logger
+RUN --mount=type=ssh git clone --recurse-submodules git@github.com:leggedrobotics/grand_tour_box.git grand_tour_box
+
 RUN . /opt/ros/$ROS_DISTRO/setup.sh && catkin build \
     anymal_msgs \
     gps_common \
     signal_logger_msgs \
     gnss_msgs \
+    tf_bag \
     && :
 
-        
+RUN mkdir /tmp_disk
+
 # entrypoint
 WORKDIR /app
 COPY ./entrypoint.sh /
