--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,7 +13,15 @@ repos:
     rev: 7.0.0
     hooks:
       - id: flake8
-        args: [--max-line-length=120, "--ignore=E402,E501,W503,C901,E731,W605,E722", "--extend-ignore=E203", "--exclude=_*,.vscode,.git", "--exclude=*_pb2*"]
+        args:
+          [
+            --max-line-length=120,
+            "--ignore=E402,E501,W503,C901,E731,W605,E722",
+            "--extend-ignore=E203",
+            "--exclude=_*,.vscode,.git",
+            "--exclude=*_pb2*",
+            "--exclude=box_utils/box_converter/huggingface-dataset-conversion*",
+          ]
         language_version: python3
         require_serial: true
   - repo: local
@@ -29,4 +37,3 @@ repos:
     hooks:
       - id: check-added-large-files
         args: ["--maxkb=5000"]
-
