--- a/.gitmodules
+++ b/.gitmodules
@@ -99,6 +99,6 @@
 	path = box_applications/gtsam_catkin
 	url = git@github.com:leggedrobotics/gtsam_catkin.git
 	branch = grandtour
-[submodule "box_utils/box_binding/external/nanobind"]
-	path = box_utils/box_binding/external/nanobind
-	url = https://github.com/wjakob/nanobind
+[submodule "box_applications/nanobind"]
+	path = box_applications/nanobind
+	url = git@github.com:wjakob/nanobind.git
