Local changes saved

--- a/box_utils/box_recording/cfg/calib_imu.yaml
+++ b/box_utils/box_recording/cfg/calib_imu.yaml
@@ -22,7 +22,27 @@ nuc:
       - /tf_static
     cpt7_local:
       - cpt7_local
-    alphasense:
-      - /gt_box/alphasense_driver_node/cam1
-      - /gt_box/alphasense_driver_node/cam2
-      - /gt_box/alphasense_driver_node/cam3
+jetson: 
+  bags:
+    imus:
+        - /ap20/tps
+        - /ap20/imu
+        - /gt_box/ap20/imu_debug
+        - /gt_box/ap20/position_debug
+        - /gt_box/ap20/timestamp_debug
+        - /gt_box/cpt7/imu/data_raw
+        - /gt_box/stim320/acceletometer_temperature
+        - /gt_box/stim320/gyroscope_temperature
+        - /gt_box/stim320/imu
+        - /gt_box/stim320/internal_counter
+        - /gt_box/stim320/kernel_time
+        - /gt_box/stim320/ros_time
+        - /gt_box/stim320/continuous_counter
+        - /gt_box/adis16475_node/imu
+        - /gt_box/zed2i_driver_node/imu/data_raw
+        - /tf
+        - /tf_static
+   # alphasense:
+   #   - /gt_box/alphasense_driver_node/cam1
+   #   - /gt_box/alphasense_driver_node/cam2
+   #   - /gt_box/alphasense_driver_node/cam3
