Change to actual robot paths

--- a/box_launch/tmux/npc.yaml
+++ b/box_launch/tmux/npc.yaml
@@ -16,10 +16,10 @@ windows:
     - shell_command:
       - source /etc/robot/ros.conf
       - source /opt/ros/noetic/setup.bash
-      - source ~/catkin_ws/devel/setup.bash
+      - source /home/integration/i_hate_docker_ws/devel/setup.bash
       - roslaunch box_recording rosbag_record_node_npc.launch
     - shell_command:
       - source /opt/ros/noetic/setup.bash
-      - source ~/catkin_ws/devel/setup.bash 
+      - source /home/integration/i_hate_docker_ws/devel/setup.bashs
       - df -h /data
       focus: true
