--- a/box_launch/tmux/lpc.yaml
+++ b/box_launch/tmux/lpc.yaml
@@ -15,10 +15,10 @@ windows:
   panes:
     - shell_command:
       - source /opt/ros/noetic/setup.bash
-      - source ~/catkin_ws/devel/setup.bash
+      - source /home/integration/i_hate_docker_ws/devel/setup.bash
       - roslaunch box_recording rosbag_record_node_lpc.launch
     - shell_command:
       - source /opt/ros/noetic/setup.bash
-      - source ~/catkin_ws/devel/setup.bash
+      - source /home/integration/i_hate_docker_ws/devel/setup.bash
       - df -h /data
       focus: true
