--- a/box_utils/box_converter/nerfstudio/cfg/grand_tour_release_short.yaml
+++ b/box_utils/box_converter/nerfstudio/cfg/grand_tour_release_short.yaml
@@ -1,5 +1,5 @@
 base_frame: dlio_map
-num_images_per_topic: 20000
+num_images_per_topic: 100000
 skip_start_seconds: 0
 skip_end_seconds: 0
 hz: 4
@@ -7,32 +7,32 @@ distance_threshold: 0.25 # -1
 
 cameras:
   - name: front
-    image_topic: /gt_box/hdr_front/image_raw/compressed
-    info_topic: /gt_box/hdr_front/camera_info
+    image_topic: /boxi/hdr/front/image_raw/compressed
+    info_topic: /boxi/hdr/front/camera_info
     bag_pattern_image: "*_hdr_front.bag"
     bag_pattern_info: "*_hdr_front.bag"
     depth_topic_out: /gt_box/hdr_front/depth
   - name: left
-    image_topic: /gt_box/hdr_left/image_raw/compressed
-    info_topic: /gt_box/hdr_left/camera_info
+    image_topic: /boxi/hdr/left/image_raw/compressed
+    info_topic: /boxi/hdr/left/camera_info
     bag_pattern_image: "*_hdr_left.bag"
     bag_pattern_info: "*_hdr_left.bag"
     depth_topic_out: /gt_box/hdr_left/depth
   - name: right
-    image_topic: /gt_box/hdr_right/image_raw/compressed
-    info_topic: /gt_box/hdr_right/camera_info
+    image_topic: /boxi/hdr/right/image_raw/compressed
+    info_topic: /boxi/hdr/right/camera_info
     bag_pattern_image: "*_hdr_right.bag"
     bag_pattern_info: "*_hdr_right.bag"
     depth_topic_out: /gt_box/hdr_right/depth
 
 nerfstudio:
-  blur_threshold: 80 # is pretty good
+  blur_threshold: 0 # 80 is pretty good
   create_mask_based_on_semantics: False
   store: True
 
 wavemap:
   log_odds_occupancy_threshold: 0.1
-  max_range: 150
+  max_range: 5
   default_depth_value: -1.0
   save_ros: False
   save_png: True
