Fix rvl decompresion and change to png

--- a/box_utils/box_converter/huggingface-dataset-conversion/rvl_compression/compressed_depth/CMakeLists.txt
+++ b/box_utils/box_converter/huggingface-dataset-conversion/rvl_compression/compressed_depth/CMakeLists.txt
@@ -1,6 +1,30 @@
 cmake_minimum_required(VERSION 3.18)
 project(compressed_depth LANGUAGES CXX)
 
+
+
+# get nanobind git clone https://github.com/wjakob/nanobind.git --recursive
+#     adds the python binding to decompress RVL compressed depth images from rosbag to PNGs
+
+# Instructions:
+
+#     git submodule update --init --recursive we added a new submodule nanobind , it should be located in: "grand_tour_box/box_utils/box_binding/compressed_depth/external"
+#     cd grand_tour_box/box_utils/box_binding/compressed_depth
+#     pip install -e . --no-build-isolation --verbose
+
+# Go to grand_tour_box/box_utils/box_auto/python/box_auto/scripts/camera
+
+# Set MISSION_DATA , WS variables, source the workspace for box_auto
+# run the script
+
+# The hacks that might be needed:
+
+#     If running within docker D_PRELOAD=/usr/lib/x86_64-linux-gnu/libffi.so.7 python dummy.py
+
+#     pip3 install nanobind scikit-build-core
+
+
+
 find_package(Python REQUIRED COMPONENTS Interpreter Development.Module)
 find_package(nanobind CONFIG REQUIRED)
 
