--- a/box_utils/box_converter/nerfstudio/cfg/grand_tour_release.yaml
+++ b/box_utils/box_converter/nerfstudio/cfg/grand_tour_release.yaml
@@ -12,24 +12,24 @@ tf_config:
 
 
 cameras:
-  # - name: hdr_front
-  #   image_topic: /boxi/hdr/front/image_raw/compressed
-  #   info_topic: /boxi/hdr/front/camera_info
-  #   bag_pattern_image: "*_hdr_front.bag"
-  #   bag_pattern_info: "*_hdr_front.bag"
-  # - name: hdr_left
-  #   image_topic: /boxi/hdr/left/image_raw/compressed
-  #   info_topic: /boxi/hdr/left/camera_info
-  #   bag_pattern_image: "*_hdr_left.bag"
-  #   bag_pattern_info: "*_hdr_left.bag"
-  # - name: hdr_right
-  #   image_topic: /boxi/hdr/right/image_raw/compressed
-  #   info_topic: /boxi/hdr/right/camera_info
-  #   bag_pattern_image: "*_hdr_right.bag"
-  #   bag_pattern_info: "*_hdr_right.bag"
-  - name: zed2i_left
-    image_topic: /boxi/zed2i/left/image_raw/compressed
-    info_topic: /boxi/zed2i/left/camera_info
+  - name: hdr_front
+    image_topic: /boxi/hdr/front/image_raw/compressed
+    info_topic: /boxi/hdr/front/camera_info
+    bag_pattern_image: "*_hdr_front.bag"
+    bag_pattern_info: "*_hdr_front.bag"
+  - name: hdr_left
+    image_topic: /boxi/hdr/left/image_raw/compressed
+    info_topic: /boxi/hdr/left/camera_info
+    bag_pattern_image: "*_hdr_left.bag"
+    bag_pattern_info: "*_hdr_left.bag"
+  - name: hdr_right
+    image_topic: /boxi/hdr/right/image_raw/compressed
+    info_topic: /boxi/hdr/right/camera_info
+    bag_pattern_image: "*_hdr_right.bag"
+    bag_pattern_info: "*_hdr_right.bag"
+  - name: zed2i_right
+    image_topic: /boxi/zed2i/right/image_raw/compressed
+    info_topic: /boxi/zed2i/right/camera_info
     bag_pattern_image: "*_zed2i_images.bag"
     bag_pattern_info: "*_zed2i_images.bag"
     use_depth_image : False
@@ -37,21 +37,49 @@ cameras:
     bag_pattern_depth_info: "*_zed2i_depth.bag"
     depth_image_topic: /boxi/zed2i/depth/image_raw/compressed
     depth_info_topic: /boxi/zed2i/depth/camera_info
-  # - name: zed2i_right
-  #   image_topic: /boxi/zed2i/right/image_raw/compressed
-  #   info_topic: /boxi/zed2i/right/camera_info
-  #   bag_pattern_image: "*_zed2i_images.bag"
-  #   bag_pattern_info: "*_zed2i_images.bag"
+    offset_in_ms: 45 
+  - name: zed2i_left
+    image_topic: /boxi/zed2i/left/image_raw/compressed
+    info_topic: /boxi/zed2i/left/camera_info
+    bag_pattern_image: "*_zed2i_images.bag"
+    bag_pattern_info: "*_zed2i_images.bag"
+    offset_in_ms: 45 
+  # - name: alphasense_front_center
+  #   image_topic: /boxi/alphasense/front_center/image_raw/compressed
+  #   info_topic: /boxi/alphasense/front_center/camera_info
+  #   bag_pattern_image: "*alphasense.bag"
+  #   bag_pattern_info: "*alphasense.bag"
+  # - name: alphasense_front_right
+  #   image_topic: /boxi/alphasense/front_right/image_raw/compressed
+  #   info_topic: /boxi/alphasense/front_right/camera_info
+  #   bag_pattern_image: "*alphasense.bag"
+  #   bag_pattern_info: "*alphasense.bag"
+  # - name: alphasense_front_left
+  #   image_topic: /boxi/alphasense/front_left/image_raw/compressed
+  #   info_topic: /boxi/alphasense/front_left/camera_info
+  #   bag_pattern_image: "*alphasense.bag"
+  #   bag_pattern_info: "*alphasense.bag"
+  # - name: alphasense_left
+  #   image_topic: /boxi/alphasense/left/image_raw/compressed
+  #   info_topic: /boxi/alphasense/left/camera_info
+  #   bag_pattern_image: "*alphasense.bag"
+  #   bag_pattern_info: "*alphasense.bag"
+  # - name: alphasense_right
+  #   image_topic: /boxi/alphasense/right/image_raw/compressed
+  #   info_topic: /boxi/alphasense/right/camera_info
+  #   bag_pattern_image: "*alphasense.bag"
+  #   bag_pattern_info: "*alphasense.bag"
     
 nerfstudio:
   blur_threshold: 0 # 80 is pretty good
   create_mask_based_on_semantics: True
   create_depth_based_on_lidar: True
   store: True
+  debug: True
 
   depth_processor:
     lidars:
-      - lidar_topic: "/boxi/dlio/hesai_deskewed"
+      - lidar_topic: "/boxi/dlio/hesai_points_undistorted"
         bag_pattern_lidar: "*dlio.bag"
         accumulate_scans: 1
       - lidar_topic: "/boxi/livox/points_undistorted"
