--- a/box_utils/box_converter/nerfstudio/cfg/grand_tour_release.yaml
+++ b/box_utils/box_converter/nerfstudio/cfg/grand_tour_release.yaml
@@ -17,16 +17,19 @@ cameras:
     info_topic: /boxi/hdr/front/camera_info
     bag_pattern_image: "*_hdr_front.bag"
     bag_pattern_info: "*_hdr_front.bag"
+    blur_threshold: 0
   - name: hdr_left
     image_topic: /boxi/hdr/left/image_raw/compressed
     info_topic: /boxi/hdr/left/camera_info
     bag_pattern_image: "*_hdr_left.bag"
     bag_pattern_info: "*_hdr_left.bag"
+    blur_threshold: 0
   - name: hdr_right
     image_topic: /boxi/hdr/right/image_raw/compressed
     info_topic: /boxi/hdr/right/camera_info
     bag_pattern_image: "*_hdr_right.bag"
     bag_pattern_info: "*_hdr_right.bag"
+    blur_threshold: 0
   - name: zed2i_right
     image_topic: /boxi/zed2i/right/image_raw/compressed
     info_topic: /boxi/zed2i/right/camera_info
@@ -38,12 +41,14 @@ cameras:
     depth_image_topic: /boxi/zed2i/depth/image_raw/compressed
     depth_info_topic: /boxi/zed2i/depth/camera_info
     offset_in_ms: 45 
+    blur_threshold: 125
   - name: zed2i_left
     image_topic: /boxi/zed2i/left/image_raw/compressed
     info_topic: /boxi/zed2i/left/camera_info
     bag_pattern_image: "*_zed2i_images.bag"
     bag_pattern_info: "*_zed2i_images.bag"
     offset_in_ms: 45 
+    blur_threshold: 125
   # - name: alphasense_front_center
   #   image_topic: /boxi/alphasense/front_center/image_raw/compressed
   #   info_topic: /boxi/alphasense/front_center/camera_info
@@ -71,11 +76,11 @@ cameras:
   #   bag_pattern_info: "*alphasense.bag"
     
 nerfstudio:
-  blur_threshold: 0 # 80 is pretty good
+  blur_threshold: 125 # 80 is pretty good  -> 125 good on zed2i -> lower more blurry images will be used
   create_mask_based_on_semantics: True
   create_depth_based_on_lidar: True
   store: True
-  debug: True
+  debug: False
 
   depth_processor:
     lidars:
