--- a/box_bringup/bringup_anymal/CMakeLists.txt
+++ b/box_bringup/bringup_anymal/CMakeLists.txt
@@ -1,6 +1,5 @@
 #=============================================================================
-
-# Copyright (C) 2023, Robotic Systems Lab, ETH Zurich
+# Copyright (C) 2023-2025, Robotic Systems Lab, ETH Zurich
 # All rights reserved.
 # http://www.rsl.ethz.ch
 #
@@ -16,12 +15,6 @@ project(bringup_anymal)
 #==
 
 find_package(catkin REQUIRED)
-
-#==
-# Package Configuration
-#==
-
-catkin_package()
 
 #==
 # Package Configuration
