--- a/box_launch/launch_pi/package.xml
+++ b/box_launch/launch_pi/package.xml
@@ -3,7 +3,7 @@
   <name>launch_pi</name>
   <version>1.0.0</version>
   <description>RSL's launch_pi package.</description>
-  <license>Proprietary</license>
+  <license>MIT</license>
   <maintainer email="bkrumme@ethz.ch">Benjamin Krummenacher</maintainer>
   <author email="bkrumme@ethz.ch">Benjamin Krummenacher</author>
   <buildtool_depend>catkin</buildtool_depend>
