--- a/box_bringup/bringup_adis16475/package.xml
+++ b/box_bringup/bringup_adis16475/package.xml
@@ -4,7 +4,7 @@
   <version>0.0.0</version>
   <description>The bringup_adis16475 package for the linux driver</description>
   <maintainer email="jonfrey@ethz.ch">Jonas Frey</maintainer>
-  <license>Proprietary</license>
+  <license>MIT</license>
   <depend>adi_imu_driver_ros</depend>
   <export>
   </export>
