--- a/box_bringup/bringup_anymal/package.xml
+++ b/box_bringup/bringup_anymal/package.xml
@@ -3,7 +3,7 @@
   <name>bringup_anymal</name>
   <version>1.0.0</version>
   <description>RSL's bringup_anymal package.</description>
-  <license>Proprietary</license>
+  <license>MIT</license>
   <maintainer email="jonfrey@ethz.ch">Jonas Frey</maintainer>
   <author email="jonfrey@ethz.ch">Jonas Frey</author>
   <buildtool_depend>catkin</buildtool_depend>
