--- a/box_bringup/bringup_hesai/package.xml
+++ b/box_bringup/bringup_hesai/package.xml
@@ -4,7 +4,7 @@
   <version>0.0.0</version>
   <description>The bringup_hesai package</description>
   <maintainer email="bkrumme@ethz.ch">Benjamin krummenacher</maintainer>
-  <license>Proprietary</license>
+  <license>MIT</license>
   <buildtool_depend>catkin</buildtool_depend>
   <depend>hesai_ros_driver</depend>
   <depend>box_power_control</depend>
