--- a/box_bringup/bringup_stim320/package.xml
+++ b/box_bringup/bringup_stim320/package.xml
@@ -4,7 +4,7 @@
   <version>0.0.0</version>
   <description>The bringup_stim320 driver</description>
   <maintainer email="tutuna@ethz.ch">Turcan Tuna</maintainer>
-  <license>Proprietary</license>
+  <license>MIT</license>
   <depend>stim320_driver</depend>
   <export>
   </export>
