--- a/box_bringup/bringup_totalstation/package.xml
+++ b/box_bringup/bringup_totalstation/package.xml
@@ -4,7 +4,7 @@
   <version>0.0.0</version>
   <description>The bringup_totalstation package</description>
   <maintainer email="bkrumme@ethz.ch">Benjamin krummenacher</maintainer>
-  <license>Proprietary</license>
+  <license>MIT</license>
   <buildtool_depend>catkin</buildtool_depend>
   <depend>leica_interface</depend>
   <export>
