--- a/box_calibration/box_calibration/package.xml
+++ b/box_calibration/box_calibration/package.xml
@@ -4,7 +4,7 @@
   <version>0.0.0</version>
   <description>The box_calibration package</description>
   <maintainer email="jonfrey@ethz.ch">Jonas Frey</maintainer>
-  <license>TODO</license>
+  <license>MIT</license>
   <buildtool_depend>catkin</buildtool_depend>
   <depend>rospy</depend>
   <depend>std_msgs</depend>
