--- a/box_utils/box_power_control/package.xml
+++ b/box_utils/box_power_control/package.xml
@@ -6,7 +6,7 @@
   <version>0.1.0</version>
   <description>Power conrol package for Grand Tour box. Currently, only for LiDARs</description>
 
-  <license>Proprietary</license>
+  <license>MIT</license>
 
   <author email="tutuna@ethz.ch">Turcan Tuna</author>
   <maintainer email="tutuna@ethz.ch">Turcan Tuna</maintainer>
