--- a/box_calibration/grand_tour_calibration_viewers/package.xml
+++ b/box_calibration/grand_tour_calibration_viewers/package.xml
@@ -4,22 +4,22 @@
    <version>0.0.0</version>
    <description>The grand_tour_calibration_viewers package</description>
 
-   <maintainer email="fu@todo.todo">fu</maintainer>
-   <license>TODO</license>
+   <maintainer email="fu@robots.ox.ac.uk">Lanke Fu</maintainer>
+   <license>MIT</license>
 
    <!-- Build tool dependencies -->
    <buildtool_depend>catkin</buildtool_depend>
-   
+
    <!-- Build dependencies -->
    <build_depend>message_generation</build_depend>
    <build_depend>grand_tour_camera_detection_msgs</build_depend>
    <build_depend>rospy</build_depend>
-   
+
    <!-- Build export dependencies -->
    <build_export_depend>message_generation</build_export_depend>
    <build_export_depend>grand_tour_camera_detection_msgs</build_export_depend>
    <build_export_depend>rospy</build_export_depend>
-   
+
    <!-- Execution dependencies -->
    <exec_depend>message_runtime</exec_depend>
    <exec_depend>grand_tour_camera_detection_msgs</exec_depend>
